website pribadi arelia maia

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ footer{
 
 #ham p{
     text-align: justify;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family: 'Lucida Sans';
 }
 
 #hham{
